--- a/index.html
+++ b/index.html
@@ -16,5 +16,21 @@
         </ul>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img src="profielfoto.jpg" alt="Justin admiraal foto" />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hoi, ik ben</p>
+        <h1 class="title">Justin Admiraal</h1>
+        <p class="section__text__p2">CMD-Student</p>
+      </div>
+    </section>
+    <section id="Over mij">
+      <div class="section__text">
+        <h2 class="title">Wie ben ik?</h2>
+        <p class="section__text__p1">CMD-Student</p>
+      </div>
+    </section>
   </body>
 </html>
