--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       <div class="logo">Justin Admiraal</div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">Projecten</a></li>
-          <li><a href="#experience">Contact</a></li>
+          <li><a href="#Over-mij">Over mij</a></li>
+          <li><a href="#projecten">Projecten</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="profielfoto.jpg" alt="Justin admiraal foto" />
+        <img class="img1" src="profielfoto.jpg" alt="Justin admiraal foto" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hoi, ik ben</p>
@@ -26,10 +27,66 @@
         <p class="section__text__p2">CMD-Student</p>
       </div>
     </section>
-    <section id="Over mij">
-      <div class="section__text">
-        <h2 class="title">Wie ben ik?</h2>
-        <p class="section__text__p1">CMD-Student</p>
+    <section id="Over-mij">
+      <div class="section__text2">
+        <h2 class="title">Over mij</h2>
+        <p class="section__text__p4">
+          Ik zit in mijn eerste jaar van de studie Communicatie Multimedia
+          Design aan de Hogeschool van Amsterdam. Ik ben 18 jaar oud en woon in
+          Alkmaar, Noord-Holland. Ik heb altijd al interesse gehad in
+          technologie en vanalles wat erbij komt kijken. Met informatica op de
+          middelbare school en voorgaand een kort jaar HBO-ICT te hebben gedaan,
+          ben ik uiteindelijk bij CMD terecht gekomen. Ik ben hierbij erg
+          geïnteresseerd in het ontwerpen van websites en applicaties en ben van
+          plan om mij hierin te specialiseren. In mijn vrije tijd speel ik veel
+          games, luister ik muziek en ben ik steeds vaker bezig met
+          programmeren. In de toekomst wil ik dan ook Front-End Developer worden
+          en mogelijk doorgroeien naar full-stack Developer.
+        </p>
+      </div>
+    </section>
+    <h2 class="projecten-titel">Projecten</h2>
+    <div class="card-container">
+      <section id="projecten1" class="card">
+        <div class="section__text2">
+          <img class="test" src="site.png" alt="Your Image" />
+          <p class="section__text__p3">
+            Dit is mijn eerste website, gemaakt voor deze opleiding. De website
+            weergeeft een deel van mijn passie over muziek. De website is
+            gemaakt met een spotify thema, en gaat over de hiphop artiesten waar
+            ik naar luister.
+          </p>
+        </div>
+      </section>
+
+      <section id="projecten2" class="card">
+        <div class="section__text2">
+          <img class="test" src="site.png" alt="Your Image" />
+          <p class="section__text__p3">
+            Dit is mijn eerste website, gemaakt voor deze opleiding. De website
+            weergeeft een deel van mijn passie over muziek. De website is
+            gemaakt met een spotify thema, en gaat over de hiphop artiesten waar
+            ik naar luister.
+          </p>
+        </div>
+      </section>
+
+      <section id="projecten3" class="card">
+        <div class="section__text2">
+          <img class="test" src="site.png" alt="Your Image" />
+          <p class="section__text__p3">
+            Dit is mijn eerste website, gemaakt voor deze opleiding. De website
+            weergeeft een deel van mijn passie over muziek. De website is
+            gemaakt met een spotify thema, en gaat over de hiphop artiesten waar
+            ik naar luister.
+          </p>
+        </div>
+      </section>
+    </div>
+    <section id="contact">
+      <div class="section__text2">
+        <h2 class="title">Contact</h2>
+        <p class="section__text__p2">just.admiraal@gmail.com</p>
       </div>
     </section>
   </body>
